--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^6.1.0",
     "gulp-livereload": "^4.0.1",
+    "gulp-pug": "^4.0.1",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-sourcemaps": "^2.6.5",
